Updated docs (Rust)

--- a/flatbuffers_guide_using_schema_compiler.html
+++ b/flatbuffers_guide_using_schema_compiler.html
@@ -110,6 +110,7 @@ $(document).ready(function(){initNavTree('flatbuffers_guide_using_schema_compile
 <li><code>--dart</code>: Generate Dart code.</li>
 <li><code>--lua</code>: Generate Lua code.</li>
 <li><code>--lobster</code>: Generate Lobster code.</li>
+<li><code>--rust</code>, <code>-r</code> : Generate Rust code.</li>
 </ul>
 <p>For any data input files:</p>
 <ul>
