--- a/usergroup0.html
+++ b/usergroup0.html
@@ -107,6 +107,7 @@ $(document).ready(function(){initNavTree('usergroup0.html','');});
 <li><a href="flatbuffers_guide_use_dart.html"><span>Use&#160;in&#160;Dart</span></a></li>
 <li><a href="flatbuffers_guide_use_lua.html"><span>Use&#160;in&#160;Lua</span></a></li>
 <li><a href="flatbuffers_guide_use_lobster.html"><span>Use&#160;in&#160;Lobster</span></a></li>
+<li><a href="flatbuffers_guide_use_rust.html"><span>Use&#160;in&#160;Rust</span></a></li>
 <li><a href="flexbuffers.html"><span>Schema-less&#160;version</span></a></li>
 <li><a href="usergroup1.html"><span>gRPC</span></a></li>
 </ul>
